# sauron_eye

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
notebook/: README.md  osm.ipynb
repl/: osm.py
sauron_eye/dags/: example_dag.py
sauron_eye/tests/: test_example.py
