[project]
name = "sauron_eye"
version = "0.1.1"
description = "Сервис для получение актуальных геоданных"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "apache-airflow>=2.10.3",
  "geopandas>=1.0.1",
  "matplotlib>=3.9.2",
  "numpy>=2.1.3",
  "pandas>=2.2.3",
  "pyarrow>=18.0.0",
  "pyrosm>=0.6.2",
  "pytest>=8.3.3",
  "qdrant-client>=1.12.1",
  "sentence-transformers>=3.3.1",
  "torch>=2.5.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "rust-just>=1.37.0",
    "tqdm>=4.67.0",
]
